# sdl2-android-app

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
